[metadata]
name = github-email-scraper
version = 1.0.0
author = Andy Smith
description = Scrape GitHub to get user emails
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andyjsmith/GitHub-Email-Scraper
keywords = scraper, github, email, crawler
classifiers =
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
	Environment :: Console

[options]
packages = github_email_scraper
python_requires = >=3.6
install_requires =
    requests

[options.entry_points]
console_scripts = 
    github-email-scraper = github_email_scraper.github_email_scraper:main
